2001-05-04  Gary Houston  <ghouston@arglist.com>

	* socket.c: define uint32_t if netdb.h doesn't.  thanks to
	Dale P. Smith.

2001-05-02  Marius Vollmer  <mvo@zagadka.ping.de>

	* rw.c: Include "modules.h" and "strports.h".

	* net_db.h (scm_gethost): Added prototype.

	* deprecation.h, deprecation.c: New.
	* Makefile.am (libguile_la_SOURCES): Added "deprecation.c".
	(DOT_X_FILES): Added "deprecation.x".
	(modinclude_HEADERS): Added "deprecation.h".

	* init.c: Include "deprecation.h".
	(scm_init_guile_1): Call scm_init_deprecation.
	
2001-05-01  Marius Vollmer  <mvo@zagadka.ping.de>

	* gh.h (gh_init_guile, gh_make_string, gh_string_length,
	gh_string_ref, gh_string_set_x, gh_substring, gh_string_append):
	New.

2001-04-29  Gary Houston  <ghouston@arglist.com>

	* rw.c: new file, implementing C part of module (ice-9 rw).
	(scm_read_string_x_partial): moved from ioext.c
	(scm_init_rw): new proc.
	* rw.h: new file.
	init.c: include rw.h and call scm_init_rw.
	Makefile.am: include rw.c and rw.h.

2001-04-28  Rob Browning  <rlb@cs.utexas.edu>

	* numbers.c: enabled local definition of SCM_FLOBUFLEN until we
	know what's supposed to happen to it.

	* list.h (scm_list_star): deprecation expired - removed.

	* numbers.h (scm_dblproc): deprecation expired - removed.
	(SCM_UNEGFIXABLE): deprecation expired - removed.
	(SCM_FLOBUFLEN): deprecation expired - removed.
	(SCM_INEXP): deprecation expired - removed.
	(SCM_CPLXP): deprecation expired - removed.
	(SCM_REAL): deprecation expired - removed.
	(SCM_IMAG): deprecation expired - removed.
	(SCM_REALPART): deprecation expired - removed.
	(scm_makdbl): deprecation expired - removed.
	(SCM_SINGP): deprecation expired - removed.
	(SCM_NUM2DBL): deprecation expired - removed.
	(SCM_NO_BIGDIG): deprecation expired - removed.

	* tags.h (SCM_DOUBLE_CELLP): deprecation expired - removed.
	(scm_tc_dblr): deprecation expired - removed.
	(scm_tc_dblc): deprecation expired - removed.
	(scm_tc16_flo): deprecation expired - removed.